--- a/index.css
+++ b/index.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap');
 
 :root {
-    --primary: #7898FF;
-    --secondary: #8E64C5;
+    --primary: #7ee71c;
+    --secondary: #32949b;
     --app-grey: #F2F2F2;
   }
 
@@ -15,6 +15,9 @@
 
 body{
 background: linear-gradient(110deg, var(--primary), var(--secondary));
+display: flex;
+justify-content: center;
+
 }
 h1{
   padding: 15px;
@@ -22,10 +25,12 @@ h1{
 main{
   background-color: white;
   text-align: center;
-  width: 400px;
+  width:300px;
   border-radius: 20px;
   margin: 0 auto;
   padding: 20px;
+  
+  
 }
 main button{
   padding: 5px 15px;
